chore: update VSCode settings and extensions for Tailwind CSS and DaisyUI support

--- a/src/client/styles/global.css
+++ b/src/client/styles/global.css
@@ -1,9 +1,10 @@
-@import '@fontsource/iosevka';
-@import 'tailwindcss';
+@import "@fontsource/iosevka";
+@import "tailwindcss";
+
 @plugin 'daisyui' {
-  themes: night --default;
-};
+    themes: night --default;
+}
 
 body {
-  font-family: 'Iosevka', monospace;
+    font-family: "Iosevka", monospace;
 }
