Refactor compatibility_flags in wrangler.jsonc for improved readability

--- a/src/client/pages/index.astro
+++ b/src/client/pages/index.astro
@@ -1,8 +1,8 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Hello from '../components/Hello.astro';
+import Hello from "../components/Hello.astro";
+import Layout from "../layouts/layout.astro";
 ---
 
 <Layout>
-	<Hello />
+  <Hello/>
 </Layout>
