--- a/src/client/styles/global.css
+++ b/src/client/styles/global.css
@@ -1,10 +1,8 @@
 @import "@fontsource/iosevka";
 @import "tailwindcss";
 
-@plugin 'daisyui' {
-    themes: night --default;
-}
+@plugin "daisyui";
 
 body {
-    font-family: "Iosevka", monospace;
+  font-family: "Iosevka", monospace;
 }
