feat: add Slogan component with typed.js animation and update dependencies

--- a/src/client/pages/index.astro
+++ b/src/client/pages/index.astro
@@ -1,8 +1,10 @@
 ---
 import Hello from "../components/Hello.astro";
+import Slogan from "../components/Slogan.astro";
 import Layout from "../layouts/layout.astro";
 ---
 
 <Layout>
   <Hello/>
+  <Slogan/>
 </Layout>
