--- a/src/client/layouts/layout.astro
+++ b/src/client/layouts/layout.astro
@@ -11,7 +11,7 @@ import "../styles/global.css";
     <meta name="generator" content={Astro.generator}>
     <title>HH_</title>
   </head>
-  <body class="min-h-screen justify-center items-center flex">
+  <body class="m-5">
     <slot/>
   </body>
 </html>
