fix: correct typo in slogan strings

--- a/src/client/components/Slogan.astro
+++ b/src/client/components/Slogan.astro
@@ -6,7 +6,7 @@
   import Typed from "typed.js";
 
   const typed = new Typed("#slogan", {
-    strings: ["Simply pragmantic.", "Effortlessly efficient.", "Code with clarity."],
+    strings: ["Simply pragmatic.", "Effortlessly efficient.", "Code with clarity."],
     typeSpeed: 50,
     backSpeed: 25,
     loop: true,
