--- a/src/client/layouts/Layout.astro
+++ b/src/client/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import "../styles/global.css";
+import ThemeToggle from "../components/ThemeToggle";
 ---
 
 <!DOCTYPE html>
@@ -16,6 +17,9 @@ import "../styles/global.css";
   </head>
 
   <body class="m-5">
+    <div class="fixed top-5 right-5">
+      <ThemeToggle client:load/>
+    </div>
     <slot/>
   </body>
 </html>
