feat: add prettier

--- a/src/client/components/Slogan.astro
+++ b/src/client/components/Slogan.astro
@@ -1,4 +1,4 @@
-<div class="text-center flex items-center justify-center min-h-screen">
+<div class="flex min-h-screen items-center justify-center text-center">
   <span id="slogan"></span>
 </div>
 
