feat: configure eslint

--- a/src/client/layouts/Layout.astro
+++ b/src/client/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
-import "../styles/global.css";
-import ThemeToggle from "../components/ThemeToggle";
+import '../styles/global.css';
+import ThemeToggle from '../components/ThemeToggle';
 ---
 
 <!doctype html>
