--- a/src/client/pages/index.astro
+++ b/src/client/pages/index.astro
@@ -1,7 +1,7 @@
 ---
-import Hello from "../components/Hello.astro";
-import Slogan from "../components/Slogan.astro";
-import Layout from "../layouts/Layout.astro";
+import Hello from '../components/Hello.astro';
+import Slogan from '../components/Slogan.astro';
+import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout>
