--- a/src/client/components/Slogan.astro
+++ b/src/client/components/Slogan.astro
@@ -3,14 +3,15 @@
 </div>
 
 <script>
-  import Typed from "typed.js";
+  import Typed from 'typed.js';
 
-  const typed = new Typed("#slogan", {
+  // eslint-disable-next-line @typescript-eslint/no-unused-vars
+  const typed = new Typed('#slogan', {
     strings: [
-      "Simply pragmatic.",
-      "Effortlessly efficient.",
-      "Code with clarity.",
-      "Design with purpose.",
+      'Simply pragmatic.',
+      'Effortlessly efficient.',
+      'Code with clarity.',
+      'Design with purpose.',
     ],
     typeSpeed: 50,
     backSpeed: 25,
