--- a/src/client/styles/global.css
+++ b/src/client/styles/global.css
@@ -1,7 +1,11 @@
 @import '@fontsource/iosevka';
 @import 'tailwindcss';
 
-@plugin 'daisyui';
+@plugin 'daisyui' {
+  themes:
+    light --default,
+    night --prefersdark;
+}
 
 body {
   font-family: 'Iosevka', monospace;
