refactor: really small changes

--- a/src/client/components/ThemeToggle.astro
+++ b/src/client/components/ThemeToggle.astro
@@ -5,8 +5,7 @@ import { Sun, Moon } from '@lucide/astro';
 <label class="swap swap-rotate">
   <!-- this hidden checkbox controls the state -->
   <input type="checkbox" class="theme-controller" value="light" />
-  <!-- sun icon -->
+  <!-- icons -->
   <Sun class="swap-off" />
-  <!-- moon icon -->
   <Moon class="swap-on" />
 </label>
