feat: add dotted background

--- a/src/client/layouts/Layout.astro
+++ b/src/client/layouts/Layout.astro
@@ -15,7 +15,7 @@ import '../styles/global.css';
     <title>HH_</title>
   </head>
 
-  <body class="m-5">
+  <body class="dotted-background m-5">
     <slot />
   </body>
 </html>
