--- a/src/client/pages/index.astro
+++ b/src/client/pages/index.astro
@@ -6,8 +6,10 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout>
-  <Hello />
-  <div class="fixed top-5 right-5">
+  <div class="p-8">
+    <Hello />
+  </div>
+  <div class="fixed top-8 right-8">
     <ThemeToggle />
   </div>
   <Slogan />
