feat: add email input

--- a/src/client/components/Slogan.astro
+++ b/src/client/components/Slogan.astro
@@ -2,7 +2,7 @@
 import Typewriter from 'astro-typewriter';
 ---
 
-<div class="flex min-h-screen items-center justify-center text-center">
+<div class="text-center">
   <Typewriter
     messages={[
       'Simply pragmatic.',
