--- a/src/client/pages/index.astro
+++ b/src/client/pages/index.astro
@@ -2,6 +2,7 @@
 import Hello from '../components/Hello.astro';
 import { SignUp } from '../components/SignUp';
 import Slogan from '../components/Slogan.astro';
+import { Status } from '../components/Status';
 import ThemeToggle from '../components/ThemeToggle.astro';
 import Layout from '../layouts/Layout.astro';
 ---
@@ -13,6 +14,7 @@ import Layout from '../layouts/Layout.astro';
     <div class="flex flex-1 flex-col items-center justify-center gap-10 text-center">
       <Slogan />
       <SignUp />
+      <Status client:visible />
     </div>
   </main>
 </Layout>
