--- a/src/client/pages/index.astro
+++ b/src/client/pages/index.astro
@@ -14,7 +14,7 @@ import Layout from '../layouts/Layout.astro';
     <div class="flex flex-1 flex-col items-center justify-center gap-10 text-center">
       <Slogan />
       <SignUp />
-      <Status client:visible />
+      <Status client:load />
     </div>
   </main>
 </Layout>
