feat(Status.tsx): add blinking effect to server status indicator

--- a/src/client/styles/global.css
+++ b/src/client/styles/global.css
@@ -10,3 +10,13 @@
 body {
   font-family: 'Iosevka', monospace;
 }
+
+@keyframes blink {
+  50% {
+    opacity: 10%;
+  }
+}
+
+.blink {
+  animation: blink 2s step-start infinite;
+}
